--- a/SimplePWGenerator/res/values-fa/strings.xml
+++ b/SimplePWGenerator/res/values-fa/strings.xml
@@ -15,6 +15,8 @@
     <string name="scON">کاراکترهای خاص - بله</string>
     <string name="numOFF">شماره - هیچ</string>
     <string name="numON">شماره - بله</string>
+    <string name="memorableOFF">به یاد ماندنی - بدون</string>
+    <string name="memorableON">به یاد ماندنی - بله</string>
     <string name="about">به خودمان رشد ما بپیوندید، با هم برای تبدیل شدن به را از مبتدی کارشناسان از این سیستم عامل فوق العاده.
 تگ تیم باز مکانی است برای همه است، با شروع با شما.</string>
 
