--- a/SimplePWGenerator/res/values/strings.xml
+++ b/SimplePWGenerator/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="scON">Special Characters ON</string>
     <string name="numOFF">Numbers OFF</string>
     <string name="numON">Numbers ON</string>
+    <string name="memorableOFF">Memorable OFF</string>
+    <string name="memorableON">Memorable ON</string>
     
     <string name="about">Join us to grow ourselves, to become together from novices to experts of this wonderful operating system.\n\nOpen Tag Team is a place for everyone, starting with you.</string>
     <string name="about2">Join us:\n\nhttp://www.facebook.com/OpenTagTeam\n\nhttps://github.com/charbonnier666/OpenTagTeam</string>
