--- a/SimplePWGenerator/res/values-ko/strings.xml
+++ b/SimplePWGenerator/res/values-ko/strings.xml
@@ -15,6 +15,8 @@
     <string name="scON">특수 문자 -에</string>
     <string name="numOFF">번호 - 오프</string>
     <string name="numON">번호 -에</string>
+    <string name="memorableOFF">기억에 남는 - 아니</string>
+    <string name="memorableON">기억에 남는 - 예</string>
     <string name="about">초보자에서이 훌륭한 운영 체제의 전문가와 함께되기 위해 자신의 성장을 우리와 함께.\n\n열기 태그 팀은 당신과 함께 시작하는 모든 사람들을위한 곳입니다.</string>
 
 </resources>
