--- a/SimplePWGenerator/res/values-pt/strings.xml
+++ b/SimplePWGenerator/res/values-pt/strings.xml
@@ -11,10 +11,12 @@
     <string name="value16">16</string>
     <string name="txt_pw_length">&#160;&#160;Comprimento da Senha</string>
     <string name="blank4">&#160;&#160;&#160;&#160;</string>
-    <string name="scOFF">Caracteres Especiais - Não</string>
-    <string name="scON">Caracteres Especiais - Sim</string>
-    <string name="numOFF">Números - Não</string>
-    <string name="numON">Números - Sim</string>
+    <string name="scOFF">Caracteres Especiais NAO</string>
+    <string name="scON">Caracteres Especiais SIM</string>
+    <string name="numOFF">Números NAO</string>
+    <string name="numON">Números SIM</string>
+    <string name="memorableOFF">Memorable NAO</string>
+    <string name="memorableON">Memorable SIM</string>
     <string name="about">Junte-se-nos a crescer a nós mesmos, para tornar-se junto de iniciantes a especialistas deste sistema operacional maravilhoso.\n\nAbra o Tag Team é um lugar para todos, começando por você.</string>
 
 </resources>
