--- a/SimplePWGenerator/res/values-bn/strings.xml
+++ b/SimplePWGenerator/res/values-bn/strings.xml
@@ -7,6 +7,8 @@
     <string name="title_section2">সেটিংস</string>
     <string name="title_section3">নোট</string>
     <string name="btn_generate">উত্পন্ন</string>
+    <string name="alert_title">সতর্কবাণী!</string>
+    <string name="alert_msg">এই আপনি সংযুক্ত থাকেন শুধুমাত্র যদি কাজ করে.</string>
     <string name="txt_description">একটি নতুন পাসওয়ার্ড তৈরি করতে উৎপন্ন টিপুন</string>
     <string name="value16">16</string>
     <string name="txt_pw_length">&#160;&#160;পাসওয়ার্ডের দৈর্ঘ্য</string>
