--- a/SimplePWGenerator/res/values-jv/strings.xml
+++ b/SimplePWGenerator/res/values-jv/strings.xml
@@ -7,6 +7,8 @@
     <string name="title_section2">setelan</string>
     <string name="title_section3">cathetan</string>
     <string name="btn_generate">njedulake</string>
+    <string name="alert_title">Warning!</string>
+    <string name="alert_msg">Iki mung dianggo yen wis disambungake.</string>
     <string name="txt_description">Pencet njedulake kanggo nggawe Pangguna anyar</string>
     <string name="value16">16</string>
     <string name="txt_pw_length">&#160;&#160;Pangguna Length</string>
